RESOLVED FIXED57962
AVF: MediaPlayerPrivateAVFoundation never reaches playable state.
https://bugs.webkit.org/show_bug.cgi?id=57962
Summary AVF: MediaPlayerPrivateAVFoundation never reaches playable state.
Jer Noble
Reported 2011-04-06 10:51:30 PDT
Because it compares two float times in seekToTime() which are slightly different but resolve to the same CMTime, no timeChanged event is ever fired.
Attachments
Patch (8.53 KB, patch)
2011-04-06 14:39 PDT, Jer Noble
mjs: review+
Jer Noble
Comment 1 2011-04-06 10:55:22 PDT
Jer Noble
Comment 2 2011-04-06 14:39:37 PDT
Maciej Stachowiak
Comment 3 2011-04-06 23:45:27 PDT
Comment on attachment 88516 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=88516&action=review r=me > Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:-634 > - LOG(Media, "MediaPlayerPrivateAVFoundation::scheduleMainThreadNotification(%p) - notification %d", this, static_cast<int>(type)); Why remove this log call? Looks like it got copied to the new overload only, which seems a bit odd.
Jer Noble
Comment 4 2011-04-07 07:50:45 PDT
(In reply to comment #3) > (From update of attachment 88516 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=88516&action=review > > r=me > > > Source/WebCore/platform/graphics/avfoundation/MediaPlayerPrivateAVFoundation.cpp:-634 > > - LOG(Media, "MediaPlayerPrivateAVFoundation::scheduleMainThreadNotification(%p) - notification %d", this, static_cast<int>(type)); > > Why remove this log call? Looks like it got copied to the new overload only, which seems a bit odd. The two other scheduleMainThreadNotification() functions (the one taking a float, and the one taking a bool) funnel into this one (which takes a full blown Notification), so the LOG message is effectively called from each. Thanks!
Jer Noble
Comment 5 2011-04-07 12:31:13 PDT
Note You need to log in before you can comment on or make changes to this bug.